--- a/css/main.css
+++ b/css/main.css
@@ -705,7 +705,7 @@ footer .container {
         -ms-flex-direction: column;
             flex-direction: column;
     text-align: center;
-    height: 300px;
+    height: 350px;
   }
 }
 
@@ -713,9 +713,6 @@ footer .footer-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
